syntax = "proto3";

package cart;
option go_package = "pb/cart";

import "google/protobuf/timestamp.proto";
import "catalog.proto";

message Cart {
  int64 storeId = 1;
  int64 customerId = 2;
  repeated Item items = 3;
  int64 totalPrice = 4;
}

message Item {
  int64 storeId = 1;
  int64 customerId = 2;
  string sku = 3;
  int32 quantity = 4;
  int64 price = 5;
  google.protobuf.Timestamp expiresAt = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message Price {
  int64 id = 1;
  int64 variantId = 2;
  double amount = 3;
  double compareAtAmount = 4;
  string currency = 5;
  int64 userRoleId = 6;
}

message SimilarProducts {
  repeated catalog.Variant variants = 1;
}

message OthersBought {
  repeated catalog.Variant variants = 1;
}

//
//
//
// Requests & Responses
//

// get cart
message GetCartRequest {
  int64 storeId = 1;
  int64 customerId = 2;
}

message GetCartResponse {
  Cart cart = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// clear cart
message ClearCartRequest {
  int64 storeId = 1;
  int64 customerId = 2;
}

message ClearCartResponse {
  int64 statusCode = 1;
  string statusMessage = 2;
}

// add item to cart
message AddItemToCartRequest {
  int64 storeId = 1;
  int64 customerId = 2;
  Item item = 3;
}

message AddItemToCartResponse {
  Cart cart = 1;
  SimilarProducts similarProducts = 2;
  OthersBought othersBought = 3;
  int64 statusCode = 4;
  string statusMessage = 5;
}

// update item quantity in cart
message UpdateItemQuantityInCartRequest {
  int64 storeId = 1;
  int64 customerId = 2;
  Item item = 3;
}

message UpdateItemQuantityInCartResponse {
  Cart cart = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// remove item in cart
message RemoveItemInCartRequest {
  int64 storeId = 1;
  int64 customerId = 2;
  string sku = 3;
}

message RemoveItemInCartResponse {
  Cart cart = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// cart client
service CartClient {
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);

  rpc AddItemToCart(AddItemToCartRequest) returns (AddItemToCartResponse);
  rpc UpdateItemQuantityInCart(UpdateItemQuantityInCartRequest)
      returns (UpdateItemQuantityInCartResponse);
  rpc RemoveItemInCart(RemoveItemInCartRequest)
      returns (RemoveItemInCartResponse);
}